--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="./img/img5.jpg" alt="">
             <img src="./img/img6.jpg" alt="">
             <img src="./img/img7.jpg" alt="">
-            <img src="./img/TNT.png" alt="">
+            <img src="./img/img8.jpg" alt="">
 
             <p>An Heolola</p>
 
