--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div id="canva">
         <canvas id="canvas"></canvas>
     </div>
-    <audio src="./img/music.mp3" autoplay loop></audio>
+    <audio src="./music.mp3" autoplay loop></audio>
     <script src="main.js"></script>
 </body>
 
