--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img src="./img/img7.jpg" alt="">
             <img src="./img/img8.jpg" alt="">
 
-            <p>An Heolola</p>
+            <p>Meo Meo xinh gái</p>
 
 
         </div>
